# pheno-htt

./: .gitignore  CMakeLists.txt  README.md
Analysis/: .gitignore  README  README.md  binning.json  buildTemplates.py  hmssm.py  plotScan.py  plotSmearedSignal.py  plotVariations.py  sHatPDF.npy  sHatPDF.py  scan.py  scan_2HDM.py  scan_MSSM.py  scan_SMS.py  scan_VLQ.py  scan_hMSSM.py  signalmtt.py  smHists.sh  smoothTemplates.py  spectrum.py  statscan.py  stripBinning.py  test.py  ttbar_res10.root  ttbar_res20.root  twohdm.py
Analysis/params/: README.md
EventProcessing/: CMakeLists.txt  README.md
EventProcessing/data/: tt-reco.root
EventProcessing/include/: DelphesReader.hpp  DelphesReaderBase.hpp  DelphesReaderGen.hpp  LJetsLHEFilter.hpp  NuReco.hpp  Processor.hpp  SmearMttWriter.hpp  SystMttHists.hpp  TTReco.hpp  TTRecoInputs.hpp  VarWriter.hpp
EventProcessing/prog/: CMakeLists.txt  mtt-hists.cpp  reco-inputs.cpp  reco-performance.cpp
EventProcessing/src/: CMakeLists.txt  DelphesReader.cpp  DelphesReaderBase.cpp  DelphesReaderGen.cpp  LJetsSelection.cpp  NuReco.cpp  Plugin.cpp  SmearMttWriter.cpp  SystMttHists.cpp  TTReco.cpp  TTRecoPerf.cpp  VarWriter.cpp
Generation/: README.md
Generation/LHE/: SM-tt-setup.script  setscales.f  ttbar_banner.txt  writeConfigs.py
Generation/LHE-signal/: A-int-setup.script  A-res-setup.script  H-int-setup.script  H-res-setup.script  patchMEInt.py  runMadGraph.sh  writeConfigs.py
Generation/LHE-tt/: .gitignore  runMadGraph.sh  writeConfigs.py
Generation/Showering/: .gitignore  cleanup.sh  delphes_card.tcl  pythiaConfig.cmnd  pythiaConfig_FSR-down.cmnd  pythiaConfig_FSR-up.cmnd  runDelphes.py
include/: AnalysisPlugin.hpp  DelphesReader.hpp  DelphesReaderBase.hpp  DelphesReaderGen.hpp  LJetsSelection.hpp  Plugin.hpp  Processor.hpp  TTReco.hpp  TTRecoInputs.hpp  TTRecoPerf.hpp  VarWriter.hpp
prog/: CMakeLists.txt  htt-tuples-gen.cpp  htt-tuples.cpp  reco-inputs.cpp  reco-performance.cpp
src/: AnalysisPlugin.cpp  CMakeLists.txt  DelphesReader.cpp  DelphesReaderBase.cpp  DelphesReaderGen.cpp  LJetsLHEFilter.cpp  LJetsSelection.cpp  Plugin.cpp  Processor.cpp  TTReco.cpp  TTRecoInputs.cpp  TTRecoPerf.cpp  VarWriter.cpp
